@startuml
skinparam classAttributeIconSize 0

abstract class Empleado {
  codigo
  dni
  nombres
  apellidos
  cargo
  sueldo_base
  estrategia_sueldo
  calcular_sueldo_base()
}

class EmpleadoTiempoCompleto {
  tipo
  estrategia_sueldo
}

class EmpleadoMedioTiempo {
  tipo
  horas_trabajadas
  tarifa_por_hora
  estrategia_sueldo
}

interface EstrategiaSueldo <<Strategy>> {
  calcular(empleado)
}

class SueldoFijo {
  calcular(empleado)
}

class SueldoPorHoras {
  calcular(empleado)
}

class Asistencia {
  empleado_id
  fecha
  estado
}

class ConceptoPago {
  empleado_id
  tipo
  concepto
  monto
  periodo
  es_bono()
  es_descuento()
  pertenece_al_periodo(periodo)
}

class Boleta {
  empleado_codigo
  empleado_nombre
  periodo
  sueldo_base
  bonos
  descuentos
  conceptos
  generar(empleado, periodo, conceptos)
  calcular_sueldo_neto()
}

class EmpleadoFactory {
  crear(data)
}

class CalculadoraSueldo {
  calcular(empleado, periodo, conceptos)
}

class EmpleadoService
class AsistenciaService
class ConceptoPagoService
class SueldoService
class BoletaService
class ReporteService

Empleado <|-- EmpleadoTiempoCompleto
Empleado <|-- EmpleadoMedioTiempo
EstrategiaSueldo <|.. SueldoFijo
EstrategiaSueldo <|.. SueldoPorHoras
EmpleadoTiempoCompleto o-- SueldoFijo
EmpleadoMedioTiempo o-- SueldoPorHoras
EmpleadoFactory ..> Empleado
Boleta ..> Empleado
Boleta o-- ConceptoPago
CalculadoraSueldo ..> Boleta
BoletaService ..> Boleta
BoletaService ..> SueldoService
SueldoService ..> CalculadoraSueldo
EmpleadoService ..> EmpleadoFactory
AsistenciaService ..> Asistencia
ConceptoPagoService ..> ConceptoPago

@enduml
